<resources>
    <string name="app_name">Peanut</string>
    <string name="create">插入</string>
    <string name="update">更新</string>
    <string name="retrieve">查询</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="know_it">知道了</string>
    <string name="computer">计算</string>
    <string name="input_price">输入价格</string>
    <string name="result">结果</string>
    <string name="forward">跳转</string>
    <string name="sum_count">总数</string>
    <string name="welcome">欢迎</string>
    <string name="home">主页</string>
    <string name="social">社交</string>
    <string name="social_share_app">分享应用</string>
    <string name="social_contact_us">联系我</string>
    <string name="test">test</string>
    <string name="test_ziRoom">自如房租</string>
    <string name="test_storage">存储</string>
    <string name="test_database">数据库</string>
    <string name="test_draw">画板</string>
    <string name="test_clock">时钟</string>
    <string name="test_webView">浏览器</string>

</resources>
