...
            android:gravity="center_vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:onClick="@{() -> listener.onItemClick(file)}"
            android:orientation="vertical">
        <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="3"
                android:text="@{file.name}"/>

...
